corrects styling on mobile i guess

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h1 {
     font-weight: normal;
     font-family: monospace;
     font-size: 5em;
-    color: white;
+    line-height: 1em;
 }
 
 /* Links */
@@ -119,6 +119,7 @@ ul {
 
 nav ul {
   list-style-type: none;
+  padding: 0 0 0 0;
 }
 
 nav ul li {
@@ -154,7 +155,7 @@ svg {
   fill: black;
 }
 
-@media screen AND (max-width: 5`00px) {
+@media screen AND (max-width: 500px) {
   body {
     margin: 0 auto;
     padding: 0 2%;
@@ -170,5 +171,8 @@ svg {
 
   a.skip-link, header div.container a.link-github, a.link-downloadcss, a.link-downloadhtml, a.link-codepen {
     display: block;
+  }
+  svg {
+    display: none;
   }
 }
